--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
       <div class="banner_content">
         <img src="/assets/img/00_banner.jpg" alt="첫 구매라면 누구나 최대 2만원 할인받기" width="1136" />
       </div>
+      <div class="close_box">
+        <div class="close">Close</div>
+      </div>
     </aside>
 
     <header id="header">
+      <div class="logo">
+        <div class="content-area">
+          <a id="logo" href="https://ohou.se/" title="오늘의 집" target="_blank" class="logo">오늘의 집</a>
+        </div>
+      </div>
       <nav id="navigation" role="navigation">
         <div class="header_content">
           <img src="/assets/img/01_header_01_navigation.jpg" alt="navigation" width="1136" />
         </div>
-
       </nav>
       <div class="submenu" role="submenu">
         <div class="header_content">
@@ -28,80 +35,80 @@
       </div>
     </header>
 
-      <main id="main" role="main">
-        <div class="main_content">
-          <section id="overview">
-            <div class="project">
-              <img src="/assets/img/02_main_01_overview_01_projects.jpg" alt="project" width="847" />
-            </div>
-            <div class="events">
-              <img src="/assets/img/02_main_01_overview_02_events.jpg" alt="events" width="269" />
-            </div>
-          </section>
-  
-          <section id="categories">
-            <img src="/assets/img/02_main_02_categories.jpg" alt="categories" width="1136" />
-          </section>
-  
-          <section id="articles_first">
-            <div class="article">
-              <img src="/assets/img/02_main_03_articles1_01_article1.jpg" alt="article1" width="1136" />
-            </div>
-            <div class="article">
-              <img src="/assets/img/02_main_03_articles1_02_article2.jpg" alt="article2" width="1136" />
-            </div>
-            <div class="article">
-              <img src="/assets/img/02_main_03_articles1_03_article3.jpg" alt="article3" width="1136" />
-            </div>
-            <div class="article">
-              <img src="/assets/img/02_main_03_articles1_04_article4.jpg" alt="article4" width="1136" />
-            </div>
-          </section>
-  
-          <section id="category_finder">
-            <img src="/assets/img/02_main_04_category_finder.jpg" alt="caregory-finder" width="1136" />
-          </section>
-  
-          <section id="today_deal">
-            <img src="/assets/img/02_main_05_today_deal.jpg" alt="today-deal" width="1136" />
-          </section>
-  
-          <section id="article_second">
-            <div class="article">
-              <img src="/assets/img/02_main_06_articles2_01_article1.jpg" alt="article1" width="1136" />
-            </div>
-            <div class="article">
-              <img src="/assets/img/02_main_06_articles2_02_article2.jpg" alt="article2" width="1136" />
-            </div>
-          </section>
-  
-          <section id="top10">
-            <img src="/assets/img/02_main_07_top10.jpg" alt="top10" width="1136" />
-          </section>
-  
-          <section id="reviews">
-            <img src="/assets/img/02_main_08_reviews.jpg" alt="reviews" width="1136" />
-          </section>
-  
-          <section class="events">
-            <img src="/assets/img/02_main_09_events.jpg" alt="events" width="1136" />
-          </section>
-  
-          <section id="best">
+    <main id="main" role="main">
+      <div class="main_content">
+        <section id="overview">
+          <div class="project">
+            <img src="/assets/img/02_main_01_overview_01_projects.jpg" alt="project" width="847" />
+          </div>
+          <div class="events">
+            <img src="/assets/img/02_main_01_overview_02_events.jpg" alt="events" width="269" />
+          </div>
+        </section>
 
-            <div class="head">
-              <div class="title">
-                <img src="/assets/img/02_main_10_best_01_head_01_title.jpg" alt="베스트" height="29" />
-              </div>
-              <div class="util">
-                <img src="/assets/img/02_main_10_best_01_head_02_util.jpg" alt="더보기" height="20" />
-              </div>
-            </div>
+        <section id="categories">
+          <img src="/assets/img/02_main_02_categories.jpg" alt="categories" width="1136" />
+        </section>
 
-            <div class="menu">
-              <img src="/assets/img/02_main_10_best_02_menu.jpg" alt="menu" width="1136" />
+        <section id="articles_first">
+          <div class="article">
+            <img src="/assets/img/02_main_03_articles1_01_article1.jpg" alt="article1" width="1136" />
+          </div>
+          <div class="article">
+            <img src="/assets/img/02_main_03_articles1_02_article2.jpg" alt="article2" width="1136" />
+          </div>
+          <div class="article">
+            <img src="/assets/img/02_main_03_articles1_03_article3.jpg" alt="article3" width="1136" />
+          </div>
+          <div class="article">
+            <img src="/assets/img/02_main_03_articles1_04_article4.jpg" alt="article4" width="1136" />
+          </div>
+        </section>
+
+        <section id="category_finder">
+          <img src="/assets/img/02_main_04_category_finder.jpg" alt="caregory-finder" width="1136" />
+        </section>
+
+        <section id="today_deal">
+          <img src="/assets/img/02_main_05_today_deal.jpg" alt="today-deal" width="1136" />
+        </section>
+
+        <section id="article_second">
+          <div class="article">
+            <img src="/assets/img/02_main_06_articles2_01_article1.jpg" alt="article1" width="1136" />
+          </div>
+          <div class="article">
+            <img src="/assets/img/02_main_06_articles2_02_article2.jpg" alt="article2" width="1136" />
+          </div>
+        </section>
+
+        <section id="top10">
+          <img src="/assets/img/02_main_07_top10.jpg" alt="top10" width="1136" />
+        </section>
+
+        <section id="reviews">
+          <img src="/assets/img/02_main_08_reviews.jpg" alt="reviews" width="1136" />
+        </section>
+
+        <section class="events">
+          <img src="/assets/img/02_main_09_events.jpg" alt="events" width="1136" />
+        </section>
+
+        <section id="best">
+          <div class="head">
+            <div class="title">
+              <img src="/assets/img/02_main_10_best_01_head_01_title.jpg" alt="베스트" height="29" />
             </div>
-<!--             
+            <div class="util">
+              <img src="/assets/img/02_main_10_best_01_head_02_util.jpg" alt="더보기" height="20" />
+            </div>
+          </div>
+
+          <div class="menu">
+            <img src="/assets/img/02_main_10_best_02_menu.jpg" alt="menu" width="1136" />
+            <a id="slide" href="" title="slide" target="_blank" width="108" height="91"></a>
+          </div>
+          <!--             
             <div class="list">
               <div class="item">
                 <img
@@ -125,36 +132,23 @@
                 />
               </div>
             </div> -->
-                
-            <div class="list">
-              <div class="list_wrap">
-                <div class="item">
-                  <img
-                    src="/assets/img/02_main_10_best_03_list_01_item1.jpg"
-                    alt="item 1"
-                    width="365"
-                  />
-                </div>
-                <div class="item">
-                  <img
-                    src="/assets/img/02_main_10_best_03_list_02_item2.jpg"
-                    alt="item 2"
-                    width="365"
-                  />
-                </div>
-                <div class="item">
-                  <img
-                    src="/assets/img/02_main_10_best_03_list_03_item3.jpg"
-                    alt="item 3"
-                    width="365"
-                  />
-                </div>
-              </div>
 
+          <div class="list">
+            <div class="list_wrap">
+              <div class="item">
+                <img src="/assets/img/02_main_10_best_03_list_01_item1.jpg" alt="item 1" width="365" />
+              </div>
+              <div class="item">
+                <img src="/assets/img/02_main_10_best_03_list_02_item2.jpg" alt="item 2" width="365" />
+              </div>
+              <div class="item">
+                <img src="/assets/img/02_main_10_best_03_list_03_item3.jpg" alt="item 3" width="365" />
+              </div>
             </div>
-          </section>
-        </div>
-      </main>
+          </div>
+        </section>
+      </div>
+    </main>
     <footer id="footer" role="contentinfo">
       <div class="footer-content">
         <img src="/assets/img/03_footer.jpg" alt="footer" width="1136" />
@@ -162,6 +156,5 @@
     </footer>
   </body>
 </html>
-
 
 숙제 - 배너에 X, 메인 로고, 슬라이드 화살표 달아오기
